# robotica

./: .gitignore  README.md  compile_commands.json
maps/: indoor.map
src/phi_aria/: CMakeLists.txt  README.md  package.xml
src/phi_aria/description/urdf/: p3dx.urdf.xacro  pioneer3dx_wheel.xacro  sick_lms100.urdf.xacro
src/phi_aria/include/: PhiROS2Aria.hpp  Pose.hpp
src/phi_aria/src/: PhiROS2Aria.cpp  Pose.cpp  phi_p3dx.cpp
src/tp1/: CMakeLists.txt  INSTRUÇÕES.txt  package.xml
src/tp1/config/: p3dx.rviz
src/tp1/include/: Action.h  Perception.h  Utils.h
src/tp1/launch/: p3dx-rosaria.launch.py
src/tp1/src/: Action.cpp  Perception.cpp  main.cpp
src/tp2/: CMakeLists.txt  INSTRUÇÕES.txt  package.xml
src/tp2/config/: p3dx.rviz
src/tp2/include/: Perception.h  Utils.h
src/tp2/launch/: p3dx-rosaria.launch.py
src/tp2/src/: Perception.cpp  main.cpp
src/tp3/: CMakeLists.txt  INSTRUÇÕES.txt  package.xml
src/tp3/config/: p3dx.rviz
src/tp3/include/: Action.h  Perception.h  Utils.h
src/tp3/launch/: p3dx-rosaria.launch.py
src/tp3/maps/: 1 - DenseMap.map
src/tp3/src/: Action.cpp  Perception.cpp  main.cpp
src/tp4/: CMakeLists.txt  INSTRUÇÕES.txt  package.xml
src/tp4/config/: p3dx.rviz
src/tp4/include/: Perception.h  Utils.h
src/tp4/launch/: p3dx-rosaria.launch.py
src/tp4/maps/: ambiguousMap.pgm  ambiguousMap.yaml  denseMap.map  sparseMap.map
src/tp4/src/: Perception.cpp  Utils.cpp  main.cpp
